# scenario-player

./: .bumpversion.cfg  .flake8  .gitignore  .post-commit  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  environment  latest.Dockerfile  mypy.ini  nightly.Dockerfile  pfs1_get_a_simple_path.yaml  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test  tox.ini  unstable.Dockerfile
.circleci/: config.yml  smoketest.keystore
.circleci/scripts/: bump-part.py  chlogger.py  constants.py  skip-on-bad-commit-message.py  update-changelog.py  validate-commit-message.py
.docker/: Dockerfile  post_build  post_push
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  service-blueprint-specs.md  service-implementation-epic.md
.github/workflows/: codeql-analysis.yml
analysis/: .gitignore  README.rst  analysis.py  chart_template.html  requirements.txt  summary_template.html
analysis/example/: raiden-scenario-player-analysis.csv  raiden-scenario-player-analysis.html  raiden-scenario-player-analysis.json
analysis/example/mediated-transfers-scenario/: durations.csv  gantt-overview.html  raiden-scenario-player-analysis.csv  raiden-scenario-player-analysis.html  raiden-scenario-player-analysis.json  scenario_log.out  statistics.html  summary.json
analysis/example/simple-scenaio/: raiden-scenario-player-analysis.csv  raiden-scenario-player-analysis.html  raiden-scenario-player-analysis.json
analysis/example/simple-scenario/: durations.csv  gantt-overview.html  scenario_log.out  statistics.html  summary.json
docker/: Dockerfile
docker/hooks/: post_push
environment/: development.json  mainnet.json  test.json
examples/: raiddit-demo.yaml  raiddit-pfs.yaml  raiddit.yaml  scenario-example-v2.yaml
raiden/scenario_player/: constants.py  main.py  node_support.py  runner.py  scenario.py  ui.py  utils.py
raiden/scenario_player/scenarios/: reference.yml  v3-example-scenario.yml
raiden/scenario_player/services/: __init__.py  server.py
raiden/scenario_player/services/common/: factories.py  metrics.py
raiden/scenario_player/services/nodes/: __init__.py  server.py
raiden/scenario_player/services/releases/: __init__.py  utils.py
raiden/scenario_player/services/runner/: server.py
raiden/scenario_player/services/scenario/: server.py
raiden/scenario_player/services/utils/: __init__.py  db.py  testing.py
raiden/scenario_player/tasks/: api_base.py  base.py  blockchain.py  channels.py  execution.py  raiden_api.py  raiden_node.py  services.py  task.py  token_network.py
scenario_player/: __init__.py  __main__.py  constants.py  definition.py  exceptions.py  main.py  node_support.py  releases.py  runner.py  scenario.py  ui.py  utils.py
scenario_player/environment/: arbitrum-one.json  arbitrum.json  development-rinkeby.json  development.json  goerli-latest.json  mainnet.json  raiddit-demo.json  test.json
scenario_player/exceptions/: __init__.py  cli.py  config.py  db.py  files.py  legacy.py  services.py  setup.py
scenario_player/hooks/: __init__.py  impl.py  specs.py
scenario_player/scenarios/: __init__.py
scenario_player/services/: __init__.py  server.py
scenario_player/services/common/: app.py  blueprints.py  factories.py  metrics.py  plugins.py  schemas.py
scenario_player/services/common/blueprints/: __init__.py  admin.py  metrics.py
scenario_player/services/keystore/: __init__.py  blueprints.py  server.py
scenario_player/services/nodes/: __init__.py  blueprints.py  server.py
scenario_player/services/releases/: __init__.py  server.py  types.py  utils.py
scenario_player/services/releases/blueprints/: __init__.py  archives.py  binaries.py  releases.py
scenario_player/services/rpc/: __init__.py  app.py  utils.py
scenario_player/services/rpc/blueprints/: __init__.py  instances.py  tokens.py  transactions.py
scenario_player/services/rpc/schemas/: base.py  instances.py  tokens.py  transactions.py
scenario_player/services/runner/: __init__.py  server.py
scenario_player/services/runner/blueprints/: __init__.py  runner.py
scenario_player/services/scenario/: __init__.py  server.py
scenario_player/services/scenario/blueprints/: __init__.py  scenario.py  validate.py
scenario_player/services/transactions/: __init__.py  app.py  utils.py
scenario_player/services/transactions/blueprints/: __init__.py  token_contract.py  tokens.py  transactions.py
scenario_player/services/transactions/schemas/: tokens.py  transactions.py
scenario_player/services/utils/: __init__.py  db.py  factories.py  installer.py  interface.py  testing.py
scenario_player/setup/: __init__.py
scenario_player/setup/cli/: base.py  mixins.py  pack.py  reclaim.py  run.py
scenario_player/setup/nodes/: __init__.py  executor.py  flags.py  utils.py
scenario_player/tasks/: api_base.py  base.py  blockchain.py  channels.py  execution.py  raiden_api.py  raiden_node.py  services.py  token_network.py
scenario_player/utils/: __init__.py  contracts.py  datastructures.py  interface.py  legacy.py  logs.py  process.py  reclaim.py  token.py  types.py  version.py
scenario_player/utils/configuration/: __init__.py  base.py  nodes.py  scenario.py  settings.py  spaas.py  token.py
scenario_player/utils/files/: __init__.py  archive.py  base.py  binary.py  constants.py  mixins.py  parsing.py
scenarios/: pfs8_mediator_goes_offline.yaml
tests/smoketests/: smoketests.yml  template.yaml
tests/unit-tests/: test_YMLParser.py
tests/unit-tests/releases/: conftest.py  test_ReleaseArchive.py  test_constants.py  test_utils.py
tests/unit-tests/services/: conftest.py
tests/unit-tests/test_services/: conftest.py
tests/unittests/: conftest.py  constants.py  test_runner.py  test_scenario_definition.py
tests/unittests/cli/: test_cli.py
tests/unittests/data/: minimal.yaml
tests/unittests/setup/: conftest.py
tests/unittests/tasks/: conftest.py  test_channels.py  test_services.py  utils.py
tests/unittests/utils/: conftest.py  test_interface.py  test_logs.py  test_token.py
(+85 files in other folders)
