[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

######################
# FLIT CONFIGURATION #
######################

[tool.flit.metadata]
# General Meta data
dist-name = "raiden-scenario-player"
module = "scenario_player"
author = "Brainbot Labs Est."
author-email = "contact@brainbot.li"
home-page = "https://github.com/raiden-network/scenario-player"
description-file = "README.rst"

# Pypi Requirements
requires-python = ">3.7"
requires = [
    'click',
    'eth-utils',
    'gevent',
    'jinja2',
    'prometheus_client<0.8.0',
    'pyyaml',
    'raiden',
    'requests',
    'simplejson',
    'structlog',
    'urwid!=2.1.0',
]

# Classifiers, Licensing, keywords for pypi.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
keywords = "raiden, raiden-network"

[tool.flit.metadata.requires-extra]
# Extended dependencies required for development and testing. Flit installs
# these automatically.
test = ["pytest"]
dev = [
    "black==20.8b1",
    "coverage",
    "codecov",
    "flake8-bugbear==20.1.4",
    "flake8-tuple==0.4.1",
    "flake8==3.8.3",
    "isort==4.3.21",
    "matrix-synapse==1.19.1",
    "mypy==0.782",
    "pylint",
    "pytest-cov",
    "responses",
]

[tool.flit.metadata.urls]
# All sorts of URLs to display on the pypi page.
GitHub = "https://github.com/raiden-network/scenario-player"
"Bug Tracker" = "https://github.com/raiden-network/scenario-player/issues"
"Raiden Homepage" = "https://raiden.network"
"Raiden Developer Portal" = "https://dev.raiden.network"

[tool.flit.entrypoints."scenario_player"]
transactions-service = "scenario_player.services.rpc.blueprints"
common-service = "scenario_player.services.common.blueprints"

[tool.flit.scripts]
# CLI commands installed along with out package.
scenario_player = "scenario_player.__main__:main"

#######################
# ISORT CONFIGURATION #
#######################

[tool.isort]
line_length = 99
known_future_library = "future"
known_first_party = "scenario_player, raiden"
default_section = "THIRDPARTY"
combine_as_imports = true
# black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


#######################
# BLACK CONFIGURATION #
#######################

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | test
  | docs
)/
'''
