[tool.poetry]
name = "scenario-player"
version = "0.7.0"
description = "A tool to run scenarios in the Raiden network"
authors = ["Brainbot Labs Est. <contact@brainbot.li>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
keywords = ["raiden", "raiden-network"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
click = ">=8.0.0a1"
eth-utils = "^1.9.5"
gevent = ""
jinja2 = ""
pyyaml = "^5.3.1"
raiden = {git = "https://github.com/raiden-network/raiden", rev = "arbitrum-v0.5.0"}
requests = "^2.24.0"
structlog = "^21.1.0"
urwid = "!=2.1.0"

[tool.poetry.dev-dependencies]
black = ""
coverage = "^5.3"
codecov = "^2.1.9"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.3"
flake8-tuple = "^0.4.1"
flake8 = "^3.8.3"
isort = "^5.6.4"
matrix-synapse = "1.33.0"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.0"
responses = "^0.10.15"

[tool.poetry.scripts]
scenario_player = "scenario_player.__main__:main"
scenario-player = "scenario_player.__main__:main"

[tool.isort]
line_length = 99
known_future_library = "future"
known_first_party = "scenario_player, raiden"
default_section = "THIRDPARTY"
combine_as_imports = true
# black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


#######################
# BLACK CONFIGURATION #
#######################

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | test
  | docs
)/
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#######################
# ISORT CONFIGURATION #
#######################
